--- a/src/main/resources/templates/subscriber/result.html
+++ b/src/main/resources/templates/subscriber/result.html
@@ -17,9 +17,9 @@
 
 <body>
 <body style="background-color:powderblue;">
-<h3>Subscriber Sign-Up Form</h3>
+<h3 class="text-center>">Subscriber Sign-Up Verification Page: </h3>
 <br>
-<p><b>Thank you for signing up for monthly deals and notifications!</b></p>
+<p><b><I>Thank you for signing up for monthly deals and future notifications!</I></b></p>
 <br>
 <h4>Subscriber:</h4>
 <br>
