--- a/src/main/resources/templates/subscriber/result.html
+++ b/src/main/resources/templates/subscriber/result.html
@@ -16,7 +16,7 @@
 
 
 <body>
-<body style="background-color:powderblue;">
+<body style="background-color:peru;">
 <h3 class="text-center>">Subscriber Sign-Up Verification Page: </h3>
 <br>
 <p><b><I>Thank you for signing up for monthly deals and future notifications!</I></b></p>
